[package]
name = "libkyber-sys"
version = "0.1.0"
links = "kyber"
build = "build.rs"
edition = "2021"
license = "CC0-1.0"
description = "Bindings for the C implementation of the Kyber key encapsulation mechanism"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.59.2"
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
